@@ -18,6 +18,9 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add a dpkg-buildflags --status action to describe the flag settings.
     Thanks to Bernhard R. Link <brlink@debian.org>. Closes: #664058
+  * Add support for “binary-only” key-value option in changelogs, to allow
+    marking changelog entries as part of a binary only upload, having a
+    different version from the source package. Closes: #440094, #672723
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
